# learning

./: .gitignore  README.md
art/: README.md
cooking/: README.md
cooking/recipes/: README.md
ml/interpretable-ai/: README.md
ml/machine-learning-engineering-in-action/: README.md
ml/misc/language-models/: pyproject.toml
ml/misc/language-models/language-models/: preprocess.py
ml/misc/language-models/language_models/: build.py  preprocess.py
programming/clojure/grokking-simplicity/: README.md
programming/haskell/: stack.yaml
programming/haskell/coffee/: CHANGELOG.md  LICENSE  coffee.cabal  package.yaml
programming/haskell/coffee/app/: Main.hs
programming/haskell/coffee/src/: Lib.hs
programming/haskell/coffee/test/: Spec.hs
programming/haskell/files/: Main.hs  README.md  numbers.txt
programming/haskell/robots/: CHANGELOG.md  package.yaml  robots.cabal
programming/haskell/robots/src/: Lib.hs
programming/haskell/word-search/: ChangeLog.md  README.md  package.yaml  word-search.cabal
programming/python/concurrency/: Makefile  README.md  bandit.yaml  pyproject.toml
programming/python/concurrency/concurrency/: __init__.py
programming/python/concurrency/concurrency/thread/: race.py  safety.py  sum_.py
programming/python/concurrency/concurrency/utils/: __init__.py  logger.py
programming/python/concurrency/tests/: test_racy_randoms.py  test_sum_thread.py  test_thread_safety.py
programming/python/naturesim/: pyproject.toml
programming/python/naturesim/natsim/animal/: __init__.py
programming/python/naturesim/natsim/game/: loop.py
programming/python/naturesim/natsim/plant/: __init__.py
programming/rust/rust-in-action/: README.md
programming/rust/rust-in-action/_2-37-search-regex-within-file-or-stdin/: Cargo.toml
programming/rust/rust-in-action/_2-37-search-regex-within-file-or-stdin/src/: main.rs
(+64 files in other folders)
