[tool.poetry]
name = "language-models"
version = "0.1.0"
description = ""
authors = ["ltbringer <amresh.venugopal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Unidecode = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
