[package]
name = "_2-37-search-regex-within-file-or-stdin"
version = "0.1.0"
authors = ["ltbringer <amresh.venugopal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
clap = "2"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
